# trans

./: LICENSE  README.md  stack.yaml  trans.cabal
app/: Main.hs
sample/: A.hs  B.hs  D.hs
sample/Chat/: C.hs
src/: Desugar.hs  Desuger.hs
