name:                trans
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/caasih/trans#readme
license:             BSD3
license-file:        LICENSE
author:              caasi Huang
maintainer:          caasi.igd@gmail.com
copyright:           Copyright: (c) 2016 caasi Huang
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Desugar
  default-extensions:  MultiParamTypeClasses
  build-depends:       base >= 4.7 && < 5
                     , haskell-src-exts >= 1.18 && < 1.19
  default-language:    Haskell2010

executable trans
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , bytestring
                     , trans
                     , filepath
                     , haskell-src-exts >= 1.18 && < 1.19
                     , zip-archive
  default-language:    Haskell2010

test-suite trans-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trans
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caasih/trans
